# Job-Finder

./: Dockerfile  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
src/job-applyer/: app.py
src/job-applyer/logic/: cover_letter_gen.py  cv_extractor.py  job_analyzer.py  job_extractor.py  langgraph_pipeline.py  linkedin_data_scraper.py  linkedin_job_scraper.py  linkedin_scraper.py
src/job-applyer/ui/: components.py  styles.py
src/job_applyer/: app.py
src/job_applyer/logic/: cover_letter_gen.py  cv_extractor.py  job_analyzer.py  job_extractor.py  langgraph_pipeline.py  linkedin_job_scraper.py
src/job_applyer/old/: linkedin_data_scraper.py
src/job_applyer/ui/: components.py
src/job_applyer/utils/: common.py  pdf_extractor.py
